<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical"
    android:layout_margin="10dp"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <EditText
        android:id="@+id/firstNameEdit"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/first_name"
        android:inputType="text"
        tools:ignore="Autofill" />

    <EditText
        android:id="@+id/lastNameEdit"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        tools:ignore="Autofill"
        android:inputType="text"
        android:hint="@string/last_name"/>

    <EditText
        android:id="@+id/emailNameEdit"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="text"
        tools:ignore="Autofill,TextFields"
        android:hint="@string/Email"/>

    <EditText
        android:id="@+id/phoneNameEdit"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="number"
        android:hint="@string/no_first"
        tools:ignore="Autofill,TextFields" />

    <EditText
        android:id="@+id/phone2NameEdit"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="number"
        android:hint="@string/number_se"
        tools:ignore="Autofill,TextFields" />

    <EditText
        android:id="@+id/addressNameEdit"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="text"
        android:hint="@string/address"
        tools:ignore="Autofill" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/updateText"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="wrap_content"
            android:padding="10dp"
            android:text="@string/Update"
            android:layout_margin="5dp"
            android:gravity="center"
            android:textColor="@color/white"
            android:background="@color/purple_700"/>

        <TextView
            android:id="@+id/cancelText"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="wrap_content"
            android:padding="10dp"
            android:layout_margin="5dp"
            android:text="@string/Cancel"
            android:gravity="center"
            android:textColor="@color/white"
            android:background="@color/red"/>

    </LinearLayout>

</LinearLayout>